--- a/app.json
+++ b/app.json
@@ -2,13 +2,30 @@
   "pages": [
     "pages/index/index",
     "pages/logs/logs",
-    "pages/goods/goods"
+    "pages/goods/goods",
+    "pages/user/user"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/user/user",
+        "text": "个人中心"
+      },
+      {
+        "pagePath": "pages/logs/logs",
+        "text": "日志"
+      }
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
