--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/goods/goods",
-    "pages/user/user"
+    "pages/user/user",
+    "pages/images/images"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -18,8 +19,16 @@
         "text": "首页"
       },
       {
+        "pagePath": "pages/index/index",
+        "text": "购物车"
+      },
+      {
+        "pagePath": "pages/index/index",
+        "text": "订单"
+      },
+      {
         "pagePath": "pages/user/user",
-        "text": "个人中心"
+        "text": "我的"
       },
       {
         "pagePath": "pages/logs/logs",
