--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "pages/order/order",
     "pages/cart/cart",
     "pages/detail/detail",
-    "pages/indexs/indexs"
+    "pages/indexs/indexs",
+    "pages/login/login"
   ],
   "window": {
     "backgroundTextStyle": "light",
