--- a/project.config.json
+++ b/project.config.json
@@ -48,23 +48,36 @@
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {
-    "search": {
-      "list": []
-    },
-    "conversation": {
+    "plugin": {
       "list": []
     },
     "game": {
-      "list": []
-    },
-    "plugin": {
       "list": []
     },
     "gamePlugin": {
       "list": []
     },
     "miniprogram": {
-      "list": []
+      "list": [
+        {
+          "name": "首页",
+          "pathName": "pages/index/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "详情页",
+          "pathName": "pages/detail/detail",
+          "query": "id=217",
+          "scene": null
+        },
+        {
+          "name": "登录测试",
+          "pathName": "pages/login/login",
+          "query": "",
+          "scene": null
+        }
+      ]
     }
   }
 }
