--- a/project.config.json
+++ b/project.config.json
@@ -82,6 +82,12 @@
           "pathName": "pages/cart/cart",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "我的",
+          "pathName": "pages/user/user",
+          "query": "",
+          "scene": null
         }
       ]
     }
