--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "pages/cart/cart",
     "pages/detail/detail",
     "pages/indexs/indexs",
-    "pages/login/login"
+    "pages/login/login",
+    "pages/cart1/cart1"
   ],
   "window": {
     "backgroundTextStyle": "light",
